- Eliminado un mensaje de depuración de la función main. - Eliminada la documentación del constructor por defecto privado de la clase NessieException. - Añadidos en la clase Recognizer un destructor, tres nuevos campos para incluir las estadísticas de las distintas etapas del programa

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -37,12 +37,12 @@ vpath %.o	./
 #
 MAIN = main.cpp Recognizer.o Clip.o
 NESSIE_EXCEPTION = NessieException.cpp NessieException.hpp
-RECOGNIZER = Recognizer.cpp Recognizer.hpp Clip.o Text.o Statistics.o Preprocessor.o
 CLIP = Clip.cpp NessieException.o
+RECOGNIZER = Recognizer.cpp Recognizer.hpp Clip.o Text.o Statistics.o Preprocessor.o
 TEXT = Text.cpp Text.hpp NessieException.o
-
 STATISTICS = Statistics.cpp Statistics.hpp
-PREPROCESSOR = Preprocessor.cpp Preprocessor.hpp Clip.o Shape.o
+PREPROCESSOR = Preprocessor.cpp Preprocessor.hpp Clip.o Shape.o Statistics.o
+
 SHAPE = Shape.cpp Shape.hpp
 CLASSIFIER = Classifier.cpp Classifier.hpp DataSet.o Shape.o
 FEATURE_VECTOR = FeatureVector.cpp FeatureVector.hpp NessieException.o
@@ -89,7 +89,6 @@ Statistics.o: $(STATISTICS)
 Preprocessor.o: $(PREPROCESSOR)
 	$(CXX) $(CXXFLAGS) $(BOOST_CXXFLAGS) $(MAGICK_CXXFLAGS) -c $< -o $@
 	@echo
-
 
 NessieException.o: $(NESSIE_EXCEPTION)
 	$(CXX) $(CXXFLAGS) -c $< -o $@
