- Añadido el carácter 32 (espacio) al conjunto de caracteres soportado por el dataset. - Añadida la devolución de un resultado por defecto cuando se intenta clasificar con un dataset vacío. - Añadida la adición de espacios en el texto resultante.

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -68,7 +68,7 @@ OBJECTS				= *.o
 MAGICK_LDFLAGS		= `Magick++-config --cppflags --cxxflags --ldflags --libs`
 MAGICK_CXXFLAGS		= `Magick++-config --cppflags --cxxflags`
 BOOST_CXXFLAGS		= -I/usr/local/include/boost
-BOOST_LDFLAGS		= -L/usr/local/lib/ -lboost_program_options
+BOOST_LDFLAGS		= -L/usr/local/lib/ -lboost_program_options -lboost_regex
 LIBPQXX_LDFLAGS		= -L/usr/local/lib/ -lpqxx
 LIBPQXX_CXXFLAGS	= -I/usr/local/include/pqxx
 CXXFLAGS			= -ansi -pipe -Wall -Wextra -g -fPIC -O2 -I$(incdir)
