- Añadida la sustitución de comillas dobles por comillas simples en la etapa de postprocesamiento. - Modificada la constante K del clasificador. Ahora K=1. - Solucionado un bug en el método FeatureExtractor::computeMoments(). Cuando el area es igual a 0 se inicializa su valor a 1 para evitar divisiones por cero.

--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -183,5 +183,5 @@ clean:
 	@$(RM) -f $(OBJECTS) $(PROGRAM) $(libdir)$(LIBRARY_SHARED_FILE).$(LIBRARY_VERSION)
 	@$(CHMOD) 0644 $(srcdir)*.cpp $(incdir)*.hpp
 
-all: clean $(LIBRARY_NAME) doc
+all: clean $(LIBRARY_NAME) 
 
