- Creada la distribución GNU de la biblioteca NessieOcr

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -1,22 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = src
-include_HEADERS	= include/Clip.hpp \
-				  include/ClassificationParadigm.hpp \
-				  include/Classifier.hpp \
-				  include/ClassifierStatistics.hpp \
-				  include/Clip.hpp \
-				  include/Dataset.hpp \
-				  include/FeatureExtractor.hpp \
-				  include/FeatureExtractorStatistics.hpp \
-				  include/FeatureVector.hpp \
-				  include/MySqlDataset.hpp \
-				  include/NessieException.hpp \
-				  include/Pattern.hpp \
-				  include/PlainTextDataset.hpp \
-				  include/PostgreSqlDataset.hpp \
-				  include/Preprocessor.hpp \
-				  include/PreprocessorStatistics.hpp \
-				  include/Recognizer.hpp \
-				  include/Region.hpp \
-				  include/Statistics.hpp \
-				  include/Text.hpp
+
+SUBDIRS = include src
+EXTRA_DIST = tools/initdbMySQL.sql tools/initdbPostgreSQL.sql
+
+
