--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -1,7 +1,5 @@
-INCLUDES		= -I../include
-
 lib_LTLIBRARIES			= libnessieocr.la
-libnessieocr_la_SOURCES	= ClassificationParadigm.cpp \
+libnessieocr_la_SOURCES	= ClassificationAlgorithm.cpp \
 						  Classifier.cpp \
 						  ClassifierStatistics.cpp \
 						  Clip.cpp \
@@ -9,17 +7,21 @@ libnessieocr_la_SOURCES	= ClassificationParadigm.cpp \
 						  FeatureExtractor.cpp \
 						  FeatureExtractorStatistics.cpp \
 						  FeatureVector.cpp \
+						  KnnClassificationAlgorithm.cpp \
+						  KnnClassifier.cpp \
 						  MySqlDataset.cpp \
 						  NessieException.cpp \
+						  NessieOcr.cpp \
 						  Pattern.cpp \
 						  PlainTextDataset.cpp \
 						  PostgreSqlDataset.cpp \
 						  Preprocessor.cpp \
 						  PreprocessorStatistics.cpp \
-						  Recognizer.cpp \
 						  Region.cpp \
 						  Statistics.cpp \
 						  Text.cpp
+
+INCLUDES = -I../include/NessieOcr
 
 bin_PROGRAMS	= ocrtest
 ocrtest_SOURCES	= ocrtest.cpp
