- Solucionado el bug en el fichero de configuración de Autoconf que no permitía compilar en Mac OS X. Se intentaba localizar las bibliotecas con ldconfig, pero en Mac OS X el mecanismo es distinto. Ahora se utiliza una búsqueda compatible con Linux y Mac OS X.
IMPORTANTE: Es necesario confirmar esta revisión en Linux.

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -1,26 +1,62 @@
 AC_PREREQ(2.61)
 AC_INIT([NessieOCR], 0.1, elitalon@gmail.com, nessieocr)
+AC_LANG([C++])
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([src/NessieOcr.cpp])
 
 
-# Check for basic programs.
+# Check for programs.
 AC_PROG_CXX
-AC_PROG_CPP
+AC_PROG_CC
 AC_PROG_INSTALL
-
-
-# Configure library generation
 AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
 
 
+# Check for Magick++
+AC_CHECK_PROG(magickconfig, [Magick++-config --version], yes, no)
+if test $magickconfig = "no"; then
+	AC_MSG_ERROR(Missing Magick++-config script.)
+else
+	CPPFLAGS="$CPPFLAGS `Magick++-config --cppflags`";
+	CXXFLAGS="$CXXFLAGS `Magick++-config --cxxflags`";
+	LDFLAGS="$LDFLAGS `Magick++-config --ldflags`";
+	LIBS="$LIBS `Magick++-config --libs`";
+	AC_CHECK_HEADER([Magick++.h], [], AC_MSG_ERROR(Missing Magick++ library))
+fi
+
+
 # Configure global flags
-CPPFLAGS="$CPPFLAGS `Magick++-config --cppflags` -I/usr/local/include";
-CXXFLAGS="$CXXFLAGS -g -Wall -W -pthread -fPIC -O3";
-LDFLAGS="$LDFLAGS `Magick++-config --ldflags` -L/usr/local/lib";
-LIBS="$LIBS `Magick++-config --libs`";
+CPPFLAGS="$CPPFLAGS -I/usr/local/include";
+CXXFLAGS="$CXXFLAGS -fPIC -O3";
+LDFLAGS="$LDFLAGS -L/usr/local/lib";
+LIBS="$LIBS -L/usr/local/lib";
+
+
+# Check for Boost libraries
+BOOST_PROGRAM_OPTIONS=`find /usr/lib -name *boost_program_options*dylib -type l | sed 's/.*lib\/lib\(.*\)\..*/\1/'` 
+if test -z $BOOST_PROGRAM_OPTIONS; then
+	BOOST_PROGRAM_OPTIONS=`find /usr/local/lib -name *boost_program_options*dylib -type l | sed 's/.*lib\/lib\(.*\)\..*/\1/'` 
+	if test -z $BOOST_PROGRAM_OPTIONS; then
+		AC_MSG_ERROR(Unable to find Boost's program_options dynamic library.)
+	fi
+fi
+
+BOOST_REGEX=`find /usr/lib -name *boost_regex*dylib -type l | sed 's/.*lib\/lib\(.*\)\..*/\1/'` 
+if test -z $BOOST_REGEX; then
+	BOOST_REGEX=`find /usr/local/lib -name *boost_regex*dylib -type l | sed 's/.*lib\/lib\(.*\)\..*/\1/'` 
+	if test -z $BOOST_REGEX; then
+		AC_MSG_ERROR(Unable to find Boost's regex dynamic library.)
+	fi
+fi
+LIBS="$LIBS -l$BOOST_PROGRAM_OPTIONS -l$BOOST_REGEX"
+
+# Check for Boost headers
+AC_CHECK_HEADER([boost/timer.hpp], [], AC_MSG_ERROR(Missing 'Timer' package from Boost library.))
+AC_CHECK_HEADER([boost/tokenizer.hpp], [], AC_MSG_ERROR(Missing 'Tokenizer' package from Boost library.))
+AC_CHECK_HEADER([boost/program_options.hpp], [], AC_MSG_ERROR(Missing 'Program options' package from Boost library.))
+AC_CHECK_HEADER([boost/regex.hpp], [], AC_MSG_ERROR(Missing 'Regex' package from Boost library.))
 
 
 # Enable/disable use of MySQL
@@ -30,6 +66,20 @@ AC_ARG_WITH([mysql],
 			[with_mysql=$withval],
 			[with_mysql='no'])
 
+# Check for MySQL database drivers
+have_mysql='no'
+if test "$with_mysql" != 'no'; then
+	CPPFLAGS="-I/usr/include/mysql $CPPFLAGS";
+	LIBS="$LIBS -lmysqlpp -lmysqlclient"
+
+	AC_CHECK_HEADER([mysql/mysql.h], [], AC_MSG_ERROR(Missing 'mysql' package.))
+	AC_CHECK_HEADER([mysql++/mysql++.h], [], AC_MSG_ERROR(Missing 'mysql++' package.))
+
+	have_mysql='yes'
+	AC_DEFINE(_WITH_MYSQL_DATASET_)
+fi
+AM_CONDITIONAL(WITH_MYSQL, test "$have_mysql" = 'yes')
+
 
 # Enable/disable use of PostgreSQL
 AC_ARG_WITH([postgres],
@@ -38,72 +88,16 @@ AC_ARG_WITH([postgres],
 			[with_postgres=$withval],
 			[with_postgres='yes'])
 
-
-# Check for MySQL database drivers
-have_mysql='no'
-if test "$with_mysql" != 'no'; then
-	CPPFLAGS="$CPPFLAGS -I/usr/include/mysql";
-	LIBS="$LIBS -lmysqlpp -lmysqlclient"
-
-	AC_LANG_PUSH([C++])
-	AC_CHECK_HEADER([mysql/mysql.h], [], AC_MSG_ERROR(Missing 'mysql' package.))
-	AC_CHECK_HEADER([mysql++/mysql++.h], [], AC_MSG_ERROR(Missing 'mysql++' package.))
-	AC_LANG_POP([C++])
-
-	have_mysql='yes'
-	AC_DEFINE(_WITH_MYSQL_DATASET_)
-fi
-AM_CONDITIONAL(WITH_MYSQL, test "$have_mysql" = 'yes')
-
-
 # Check for PostgreSQL database drivers
 have_postgres='no'
 if test "$with_postgres" != 'no'; then
 	LIBS="$LIBS -lpqxx"
-	AC_LANG_PUSH([C++])
 	AC_CHECK_HEADER([pqxx/pqxx], [], AC_MSG_ERROR(Missing 'libpqxx' package.))
-	AC_LANG_POP([C++])
 
 	have_postgres='yes'
 	AC_DEFINE(_WITH_POSTGRESQL_DATASET_)
 fi
 AM_CONDITIONAL(WITH_POSTGRESQL, test "$have_postgres" = 'yes')
-
-
-# Check for Magick++
-AC_CHECK_PROG(magickconfig, [Magick++-config --version], yes, no)
-if test $magickconfig = "no"; then
-	AC_MSG_ERROR(Missing Magick++-config script.)
-else
-	AC_LANG_PUSH([C++])
-	AC_CHECK_HEADER([Magick++.h], [], AC_MSG_ERROR(Missing Magick++ library))
-	AC_LANG_POP([C++])
-fi
-
-
-# Check for Boost libraries
-BOOST_PROGRAM_OPTIONS=`ldconfig -p | grep libboost_program_options | tail -n 1 | awk '{print $1;}' | sed 's/lib//; s/\..*//'`
-BOOST_REGEX=`ldconfig -p | grep libboost_regex  | tail -n 1 | awk '{print $1;}' | sed 's/lib//; s/\..*//'`
-LIBS="$LIBS -l$BOOST_PROGRAM_OPTIONS -l$BOOST_REGEX"
-AC_LANG_PUSH([C++])
-AC_CHECK_HEADER([boost/timer.hpp], [], AC_MSG_ERROR(Missing 'Timer' package from Boost library.))
-AC_CHECK_HEADER([boost/tokenizer.hpp], [], AC_MSG_ERROR(Missing 'Tokenizer' package from Boost library.))
-AC_CHECK_HEADER([boost/program_options.hpp], [], AC_MSG_ERROR(Missing 'Program options' package from Boost library.))
-AC_CHECK_HEADER([boost/regex.hpp], [], AC_MSG_ERROR(Missing 'Regex' package from Boost library.))
-AC_LANG_POP([C++])
-
-
-# Checks for typedefs, structures, and compiler characteristics.
-AC_HEADER_STDBOOL
-AC_C_CONST
-AC_C_INLINE
-AC_TYPE_SIZE_T
-
-
-# Checks for library functions.
-AC_FUNC_STAT
-AC_CHECK_FUNCS([pow sqrt])
-
 
 AC_CONFIG_FILES([Makefile src/Makefile include/Makefile])
 AC_OUTPUT
