- Corregidos dos errores de sintaxis en el fichero de configuración de Autoconf, en los IF del chequeo de bibliotecas Boost

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -36,17 +36,17 @@ LIBS="$LIBS -L/usr/local/lib";
 
 # Check for Boost libraries
 BOOST_PROGRAM_OPTIONS=`find /usr/lib -name *boost_program_options*dylib -type l | sed 's/.*lib\/lib\(.*\)\..*/\1/'` 
-if test -z $BOOST_PROGRAM_OPTIONS; then
+if test -z "$BOOST_PROGRAM_OPTIONS"; then
 	BOOST_PROGRAM_OPTIONS=`find /usr/local/lib -name *boost_program_options*dylib -type l | sed 's/.*lib\/lib\(.*\)\..*/\1/'` 
-	if test -z $BOOST_PROGRAM_OPTIONS; then
+	if test -z "$BOOST_PROGRAM_OPTIONS"; then
 		AC_MSG_ERROR(Unable to find Boost's program_options dynamic library.)
 	fi
 fi
 
 BOOST_REGEX=`find /usr/lib -name *boost_regex*dylib -type l | sed 's/.*lib\/lib\(.*\)\..*/\1/'` 
-if test -z $BOOST_REGEX; then
+if test -z "$BOOST_REGEX"; then
 	BOOST_REGEX=`find /usr/local/lib -name *boost_regex*dylib -type l | sed 's/.*lib\/lib\(.*\)\..*/\1/'` 
-	if test -z $BOOST_REGEX; then
+	if test -z "$BOOST_REGEX"; then
 		AC_MSG_ERROR(Unable to find Boost's regex dynamic library.)
 	fi
 fi
