- Completado el fichero de configuración de Autoconf para detectar si en el sistema se encuentra instalado PostgreSQL, que es la base de datos por defecto.

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -6,15 +6,16 @@ AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([src/NessieOcr.cpp])
 
 
-# Check for programs.
+# Check for basic programs.
 AC_PROG_CXX
 AC_PROG_CC
 AC_PROG_INSTALL
+AC_PROG_SED
 AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
 
 
-# Check for Magick++
+# Check for Magick++ configuration. Setup of global variables.
 AC_CHECK_PROG(magickconfig, [Magick++-config --version], yes, no)
 if test $magickconfig = "no"; then
 	AC_MSG_ERROR(Missing Magick++-config script.)
@@ -52,6 +53,7 @@ if test -z "$BOOST_REGEX"; then
 fi
 LIBS="$LIBS -l$BOOST_PROGRAM_OPTIONS -l$BOOST_REGEX"
 
+
 # Check for Boost headers
 AC_CHECK_HEADER([boost/timer.hpp], [], AC_MSG_ERROR(Missing 'Timer' package from Boost library.))
 AC_CHECK_HEADER([boost/tokenizer.hpp], [], AC_MSG_ERROR(Missing 'Tokenizer' package from Boost library.))
@@ -65,6 +67,7 @@ AC_ARG_WITH([mysql],
 							[Use MySQL framework to load the dataset])],
 			[with_mysql=$withval],
 			[with_mysql='no'])
+
 
 # Check for MySQL database drivers
 have_mysql='no'
@@ -88,9 +91,18 @@ AC_ARG_WITH([postgres],
 			[with_postgres=$withval],
 			[with_postgres='yes'])
 
+
 # Check for PostgreSQL database drivers
 have_postgres='no'
 if test "$with_postgres" != 'no'; then
+	# Check if any PostgreSQL database is installed.
+	AC_PATH_PROGS(PG_CONFIG, pg_config)
+	if test -z "$PG_CONFIG" || test ! -r "$PG_CONFIG"; then
+		AC_MSG_ERROR([PostgreSQL configuration script pg_config not found.  Make sure this is in your
+command path before configuring.  Without it, the configure script has no way to
+find the right location for the libpq library and its headers.])
+	fi
+	
 	LIBS="$LIBS -lpqxx"
 	AC_CHECK_HEADER([pqxx/pqxx], [], AC_MSG_ERROR(Missing 'libpqxx' package.))
 
