--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -3,4 +3,5 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = include src
 EXTRA_DIST = tools/initdbMySQL.sql tools/initdbPostgreSQL.sql tools/Doxyfile doc/html
 
-
+install-exec-hook:
+	ldconfig
